--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"json-server --watch --port 5000 --host 127.0.0.1 db.json\"",
+    "start": "concurrently \"react-scripts start\" \"node server.js\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
