--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"node server.js\"",
+    "start": "concurrently \"react-scripts start\" \"json-server --watch --host ecommerce-pizza-place.herokuapp.com  --port 80\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
