--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.6.1",
     "concurrently": "^7.0.0",
     "jquery": "^3.6.0",
+    "json-server": "^0.17.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
