--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"node server.js\"",
+    "start": "concurrently \"node server.js\" \"react-scripts start\" ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
