--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "concurrently \"node server.js\" \"react-scripts start\" ",
+    "start": "react-scripts start",
     "build": "react-scripts build",
+    "heroku-postbuild": "node server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
